--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@11ty/eleventy": "^3.1.1",
-    "@quasibit/eleventy-plugin-sitemap": "^2.2.0"
+    "@11ty/eleventy": "^3.1.1"
   }
 }
